--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Mingyi Li (李铭祎)"
-  avatar           : "images/mingyi.png"
+  avatar           : "images/mingyi.jpg"
   bio              : "Shandong University"
   location         : "Qingdao, China"
   employer         :
